--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="ti-menu"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="nav" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item dropdown dropdown-slide">
                     <a class="nav-link" href="../../index.html">Home</a>
@@ -16,10 +16,12 @@
                     </a>
                     <!-- Dropdown list -->
                     <div class="dropdown-menu">
+                        <ul>
                         <a class="dropdown-item" href="our-history.html">Our History</a>
                         <a class="dropdown-item" href="community.html">Serving Community</a>
                         <a class="dropdown-item" href="associations.html">Associations</a>
                         <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
+                        </ul>
                     </div>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
@@ -145,10 +147,12 @@
                 </a>
                 <!-- Dropdown list -->
                 <div class="dropdown-menu">
+                    <ul>
                     <a class="dropdown-item" href="our-history.html">Our History</a>
                     <a class="dropdown-item" href="community.html">Serving Community</a>
                     <a class="dropdown-item" href="associations.html">Associations</a>
                     <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
+                    </ul>
                 </div>
             </li>
             <li class="nav-item dropdown dropdown-slide">
